// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContentTabsComponent should hightlight selected tab with primary color 1`] = `
<app-content-tabs
  selectedType={[Function EventEmitter]}
  tabs={[Function Array]}
  type={[Function String]}
>
  <div
    class="content-tabs"
  >
    
    <button
      class="mat-button mat-primary"
      mat-button=""
      ng-reflect-color="primary"
    >
      <span
        class="mat-button-wrapper"
      >
        tab1
      </span>
      <div
        class="mat-button-ripple mat-ripple"
        matripple=""
        ng-reflect-centered="false"
        ng-reflect-disabled="false"
        ng-reflect-trigger="[object HTMLButtonElement]"
      />
      <div
        class="mat-button-focus-overlay"
      />
    </button>
    <button
      class="mat-button"
      mat-button=""
      ng-reflect-color=""
    >
      <span
        class="mat-button-wrapper"
      >
        tab2
      </span>
      <div
        class="mat-button-ripple mat-ripple"
        matripple=""
        ng-reflect-centered="false"
        ng-reflect-disabled="false"
        ng-reflect-trigger="[object HTMLButtonElement]"
      />
      <div
        class="mat-button-focus-overlay"
      />
    </button>
  </div>
</app-content-tabs>
`;

exports[`ContentTabsComponent should show "tabs" @Input 1`] = `
<app-content-tabs
  selectedType={[Function EventEmitter]}
  tabs={[Function Array]}
  type=""
>
  <div
    class="content-tabs"
  >
    
    <button
      class="mat-button"
      mat-button=""
      ng-reflect-color=""
    >
      <span
        class="mat-button-wrapper"
      >
        tab1
      </span>
      <div
        class="mat-button-ripple mat-ripple"
        matripple=""
        ng-reflect-centered="false"
        ng-reflect-disabled="false"
        ng-reflect-trigger="[object HTMLButtonElement]"
      />
      <div
        class="mat-button-focus-overlay"
      />
    </button>
    <button
      class="mat-button"
      mat-button=""
      ng-reflect-color=""
    >
      <span
        class="mat-button-wrapper"
      >
        tab2
      </span>
      <div
        class="mat-button-ripple mat-ripple"
        matripple=""
        ng-reflect-centered="false"
        ng-reflect-disabled="false"
        ng-reflect-trigger="[object HTMLButtonElement]"
      />
      <div
        class="mat-button-focus-overlay"
      />
    </button>
  </div>
</app-content-tabs>
`;

exports[`ContentTabsComponent should show "tabs" @Input 2`] = `
<app-content-tabs
  selectedType={[Function EventEmitter]}
  tabs={[Function Array]}
  type=""
>
  <div
    class="content-tabs"
  >
    
    <button
      class="mat-button"
      mat-button=""
      ng-reflect-color=""
    >
      <span
        class="mat-button-wrapper"
      >
        tab1
      </span>
      <div
        class="mat-button-ripple mat-ripple"
        matripple=""
        ng-reflect-centered="false"
        ng-reflect-disabled="false"
        ng-reflect-trigger="[object HTMLButtonElement]"
      />
      <div
        class="mat-button-focus-overlay"
      />
    </button>
  </div>
</app-content-tabs>
`;

exports[`ContentTabsComponent should show "tabs" @Input 3`] = `
<app-content-tabs
  selectedType={[Function EventEmitter]}
  tabs={[Function Array]}
  type=""
>
  <div
    class="content-tabs"
  >
    
  </div>
</app-content-tabs>
`;
